# european-data-format-rust-crate

./: AGENTS.md  CITATION.cff  Cargo.toml  README.md  index.md  plan.md
.claude/: settings.local.json
doc/: index.md
doc/edge-cases/: index.md  plan.md  tasks.md
doc/specification/: index.md
examples/: example.edf  example.json  example.xml  generate_examples.rs
src/: annotation.rs  edf_file.rs  error.rs  header.rs  io_edf.rs  io_json.rs  io_xml.rs  lib.rs  main.rs
tests/: edge_case_test.rs  integration_test.rs
